# design_patterns

./: .clang-format  .clang-tidy  .gitignore  CMakeFunctions.cmake  CMakeLists.txt  doxy.in
include/: pattern.h  pattern.hpp  singleton.hpp
test/: test.cpp
